--- a/vistas/login.html
+++ b/vistas/login.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ADVentas | www.incanatoit.com</title>
+    <title>SLTECHNOLOGY</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="../public/css/bootstrap.min.css">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="css/font-awesome.css">
-   
+    <link rel="stylesheet" href="../public/css/font-awesome.css">
+
     <!-- Theme style -->
-    <link rel="stylesheet" href="css/AdminLTE.min.css">
+    <link rel="stylesheet" href="../public/css/AdminLTE.min.css">
     <!-- iCheck -->
-    <link rel="stylesheet" href="blue.css">
+    <link rel="stylesheet" href="../public/css/blue.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,58 +23,56 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body class="hold-transition login-page">
+</head>
+
+<body class="hold-transition login-page">
     <div class="login-box">
-      <div class="login-logo">
-        <a href="../../index2.html"><b>ADVentas</b></a>
-      </div><!-- /.login-logo -->
-      <div class="login-box-body">
-        <p class="login-box-msg">Ingrese sus datos de Acceso</p>
-        <form action="../../index2.html" method="post">
-          <div class="form-group has-feedback">
-            <input type="email" class="form-control" placeholder="Email">
-            <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-          </div>
-          <div class="form-group has-feedback">
-            <input type="password" class="form-control" placeholder="Password">
-            <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-          </div>
-          <div class="row">
-            <div class="col-xs-8">
-              <div class="checkbox icheck">
-                <label>
-                  <input type="checkbox"> Recordar
-                </label>
-              </div>
-            </div><!-- /.col -->
-            <div class="col-xs-4">
-              <button type="submit" class="btn btn-primary btn-block btn-flat">Ingresar</button>
-            </div><!-- /.col -->
-          </div>
-        </form>
+        <div class="login-logo">
+            <a href="../../index2.html"><b>ADVentas</b></a>
+        </div>
+        <!-- /.login-logo -->
+        <div class="login-box-body">
+            <p class="login-box-msg">Ingrese sus datos de Acceso</p>
+            <form method="post" id="frmAcceso">
+                <div class="form-group has-feedback">
+                    <input type="text" id="logina" name="logina" class="form-control" placeholder="Usuario">
+                    <span class="fa fa-user form-control-feedback"></span>
+                </div>
+                <div class="form-group has-feedback">
+                    <input type="password" id="clavea" name="clavea" class="form-control" placeholder="Password">
+                    <span class="fa fa-key form-control-feedback"></span>
+                </div>
+                <div class="row">
+                    <div class="col-xs-8">
 
-        
-        <a href="#">Olvidé mi password</a><br>
-        
+                    </div>
+                    <!-- /.col -->
+                    <div class="col-xs-4">
+                        <button type="submit" class="btn btn-primary btn-block btn-flat">Ingresar</button>
+                    </div>
+                    <!-- /.col -->
+                </div>
+            </form>
 
-      </div><!-- /.login-box-body -->
-    </div><!-- /.login-box -->
 
-    <!-- jQuery 2.1.4 -->
-    <script src="js/jQuery-2.1.4.min.js"></script>
+            <a href="#">Olvidé mi password</a><br>
+
+
+        </div>
+        <!-- /.login-box-body -->
+    </div>
+    <!-- /.login-box -->
+
+    <!-- jQuery -->
+    <script src="../public/js/jquery-3.1.1.min.js"></script>
     <!-- Bootstrap 3.3.5 -->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- iCheck -->
-    <script src="js/icheck.min.js"></script>
-    <script>
-      $(function () {
-        $('input').iCheck({
-          checkboxClass: 'icheckbox_square-blue',
-          radioClass: 'iradio_square-blue',
-          increaseArea: '20%' // optional
-        });
-      });
-    </script>
-  </body>
+    <script src="../public/js/bootstrap.min.js"></script>
+    <!-- Bootbox -->
+    <script src="../public/js/bootbox.min.js"></script>
+
+    <script type="text/javascript" src="scripts/login.js"></script>
+
+
+</body>
+
 </html>
