--- a/vistas/login.html
+++ b/vistas/login.html
@@ -35,11 +35,11 @@
             <p class="login-box-msg">Ingrese sus datos de Acceso</p>
             <form method="post" id="frmAcceso">
                 <div class="form-group has-feedback">
-                    <input type="text" id="logina" name="logina" class="form-control" placeholder="Usuario">
+                    <input type="text" id="logina" name="logina" class="form-control" placeholder="Usuario" autocomplete="off">
                     <span class="fa fa-user form-control-feedback"></span>
                 </div>
                 <div class="form-group has-feedback">
-                    <input type="password" id="clavea" name="clavea" class="form-control" placeholder="Password">
+                    <input type="password" id="clavea" name="clavea" class="form-control" placeholder="Password" autocomplete="off">
                     <span class="fa fa-key form-control-feedback"></span>
                 </div>
                 <div class="row">
