--- a/vistas/login.html
+++ b/vistas/login.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Type" content="text/html" />
+    <meta name="description" content="CENTRO DE ATENCION" />
+    <meta name="author" content="SLTECHNOLOGY" />
+    <meta name="copyright" content="&copy; 2020" />
+
     <title>SLTECHNOLOGY</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
@@ -44,7 +49,8 @@
                     <input type="password" id="clavea" name="clavea" class="form-control" placeholder="Contraseña" autocomplete="off">
                     <span class="fa fa-key form-control-feedback"></span>
            
-                        <button id="show_password" class="btn btn-primary" type="button" onclick="mostrarPassword()"> <span class="fa fa-eye-slash icon"></span> </button>
+                        <button id="show_password" class="btn btn-primary" type="button" onclick="mostrar()"> <span class="fa fa-eye-slash icon"></span> </button>
+
                   
                 </div>
                 <div class="row">
