--- a/vistas/login.html
+++ b/vistas/login.html
@@ -49,7 +49,7 @@
                     <input type="password" id="clavea" name="clavea" class="form-control" placeholder="Contraseña" autocomplete="off">
                     <span class="fa fa-key form-control-feedback"></span>
            
-                        <button id="show_password" class="btn btn-primary" type="button" onclick="mostrar()"> <span class="fa fa-eye-slash icon"></span> </button>
+                        <button id="show_password" class="btn btn-primary" type="button" onclick="mostrarPassword()"> <span class="fa fa-eye-slash icon"></span> </button>
 
                   
                 </div>
